# phpsci-carray

./: .coveralls.yml  .gitignore  .php_cs.dist  .phpstan.neon  .travis.yml  CMakeLists.txt  COPYING  LICENSE  Makefile  README.MD  README.md  composer.json  config.m4  config.w32  mkdocs.yml  phpbench.json  phpsci.c  phpsci.h  phpunit.xml  plain.php  sciboard
.phan/: config.php
docs/: array_initializers.md  index.md  linalg.md  math.md
kernel/: alloc.c  alloc.h  assign.c  assign.h  buffer.c  buffer.h  calculation.c  carray.c  carray.h  clip.c  convert.c  convert.h  ctors.c  getset.c  gpu.c  item_selection.c  join.c  linalg.c  linalg.h  number.c  number.h  round.c  search.c  shape.c  simd.c  simd.h  statistics.c
kernel/common/: cblas_funcs.c  clblas_funcs.c  clblas_funcs.h  common.c  common.h  exceptions.c
kernel/interfaces/: rubix.c  rubix.h  rubix.h.gch
kernel/random/: distributions.c
src/PHPSci/: CArray.php  PHPSci.php
tests/Initializers/: ArrayConvertTest.php  IdentityTest.php  ZerosTest.php
tests/LinearAlgebra/: InnerProductTest.php  InvertTest.php  MatmulTest.php
tests/Math/: ArithmeticTest.php  BasicOperationsTest.php
tests/Performance/: bootstrap.php
tests/Ranges/: ArangeTest.php  LinspaceTest.php  LogspaceTest.php
tests/arithmetics/: arithmetics_dd_1d_add.phpt  arithmetics_di_1d_add.phpt  arithmetics_id_1d_add.phpt  arithmetics_ii_1d_add.phpt  arithmetics_ii_2d_1d_add.phpt  arithmetics_ii_2d_1d_add_broadcastexception.phpt
tests/initializers/: linspace.basicadd.phpt  linspace.basicdump.phpt
travis/: build.ini  compile.sh
(+68 files in other folders)
